src/tizenclaw/error.log
    Checking tizenclaw v1.0.0 (/home/hjhun/samba/github/tizenclaw/src/tizenclaw)
error[E0599]: no function or associated item named `system` found for struct `backend::LlmMessage` in the current scope
   --> src/tizenclaw/src/core/agent_core.rs:954:59
    |
954 | ...ges.push(LlmMessage::system(&format!("{}\n{}", step_marke...
    |                         ^^^^^^ function or associated item not found in `backend::LlmMessage`
    |
   ::: src/tizenclaw/src/llm/backend.rs:18:1
    |
 18 | pub struct LlmMessage {
    | --------------------- function or associated item `system` not found for this struct
    |
note: if you're trying to build a new `backend::LlmMessage` consider using one of the following associated functions:
      backend::LlmMessage::user
      backend::LlmMessage::assistant
      backend::LlmMessage::tool_result
   --> src/tizenclaw/src/llm/backend.rs:34:5
    |
 34 |     pub fn user(text: &str) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
 42 |     pub fn assistant(text: &str) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
 50 |     pub fn tool_result(call_id: &str, name: &str, result: Value) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0599`.
error: could not compile `tizenclaw` (bin "tizenclaw") due to 1 previous error
